<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_test">Constantinople is the largest city in Turkey?</string>
    <string name="button_true_text">True</string>
    <string name="button_false_text">False</string>
    <string name="button_next">Next</string>
    <string name="button_next_descriptor">Next question</string>
    <string name="button_prev">Prev</string>
    <string name="button_prev_descriptor">Prev question</string>
    <string name="toast_correct">Correct!</string>
    <string name="toast_incorrect">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>
