<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tool="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:orientation="vertical"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:orientation="vertical">

        <TextView
            android:id="@+id/text_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tool:text="@string/question_test"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/button_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_true_text"/>

            <Button
                android:id="@+id/button_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_false_text"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/button_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrov_left"
                android:contentDescription="@string/button_prev_descriptor"/>
            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"
                android:contentDescription="@string/button_next_descriptor"/>
        </LinearLayout>

        <TextView
            android:id="@+id/api_version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            tool:text="API 9"/>
    </LinearLayout>
</LinearLayout>